; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/xen/extr_xen_intr.c_evtchn_cpu_mask_port.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/xen/extr_xen_intr.c_evtchn_cpu_mask_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xen_intr_pcpu_data = type { i32 }

@xen_intr_pcpu = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @evtchn_cpu_mask_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @evtchn_cpu_mask_port(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.xen_intr_pcpu_data*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @xen_intr_pcpu, align 4
  %8 = call %struct.xen_intr_pcpu_data* @DPCPU_ID_PTR(i32 %6, i32 %7)
  store %struct.xen_intr_pcpu_data* %8, %struct.xen_intr_pcpu_data** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.xen_intr_pcpu_data*, %struct.xen_intr_pcpu_data** %5, align 8
  %11 = getelementptr inbounds %struct.xen_intr_pcpu_data, %struct.xen_intr_pcpu_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @xen_clear_bit(i32 %9, i32 %12)
  ret void
}

declare dso_local %struct.xen_intr_pcpu_data* @DPCPU_ID_PTR(i32, i32) #1

declare dso_local i32 @xen_clear_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
